# trailsync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  logo_generation_guide.md  logo_specifications.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run_app.sh  service_name_ideas.md
.pytest_cache/v/cache/: nodeids
docs/: design.md  gpx_conversion_analysis.md  pull_request.md  release_notes_v1.1.0.md
docs/planning/: gpx_analysis.md  implementation_proposal.md  improved_converter_readme.md  integration_plan.md  logo_ideas.md
src/: yamareco_to_runkeeper.py  yamareco_to_runkeeper_improved.py
src/trailsync/: __init__.py
src/trailsync/services/: __init__.py
src/universal_gpx_converter/: converter.py  main.py  parser.py
src/universal_gpx_converter/services/: __init__.py  runkeeper.py  strava.py  yamareco.py
tests/: test_improved_converter.py  test_parser.py
tests/test_data/: runkeeper_sample.gpx  strava.gpx  strava_sample.gpx  yamareco_sample.gpx
tests/test_data/output/: diff_output.html  improved_formatted_output.gpx  improved_output.gpx  original_output.gpx
