[tool.poetry]
name = "trailsync"
version = "0.1.0"
description = "GPXファイル変換ライブラリ - 様々なアクティビティログサービスのGPXファイルを統一フォーマットに変換"
authors = ["HōkaLabs"]
readme = "README.md"
packages = [
    {include = "trailsync", from = "src"},
    {include = "universal_gpx_converter", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.3"
pandas = "^2.0.0"
gunicorn = "^21.2.0"
dash = "^2.14.0"
dash-bootstrap-components = "^1.5.0"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"